--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,6 @@
 <style>
 body {
 	p {
-	width: 75%
 	font-family: Arial, Helvetica, sans-serif
 	}
 }
@@ -44,7 +43,7 @@ body {
 
 
 	<h4> What does Architecture mean to you? </h4> 
-	<input type="radio" name="Architecture" value="Magazine"> Grand Designs and Better Homes & Gardens <br>
+	<input type="radio" name="Architecture" value="Magazine"> Grand Designs and Better Homes and Gardens <br>
 	<input type="radio" name="Architecture" value="Matrix"> Architecture is a computer for living <br>
 	<input type="radio" name="Architecture" value="Academic"> Architecture is the masterly, correct and magnificent play of masses brought together in light - Le Corbusier, Vers Un Architecture 1923 <br>
 	<input type="radio" name="Architecture" value="Anarchist"> Existing Architecture is the manifestation of the Patriarchy's Hegemony over the city. We must reclaim the streets before we can bring an Architecture to the masses <br>
