change the file

--- a/Index.html
+++ b/Index.html
@@ -1,66 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>Manifesto Rewrite Form </title>
-<head>
-<style>
-body {
-	p {
-	font-family: Arial, Helvetica, sans-serif
-	}
-}
-</style>
-</head>
-
 
 <body>
+<h1> Hello World </h1>
 
-<form action="personalisedmanifesto.php" method="post">
-	
-	<h2> The Self Service Manifesto </h2>
-	
-	<h4> Which of the following parties best represent your political interests? </h4>
-	<input type="radio" name="PoliticalInvolvement" value="Magazine / Academic"> The Labor Party or The Greens <br>
-	<input type="radio" name="PoliticalInvolvement" value="Matrix"> The Pirate Party Australia, Online Direct Democracy or VOTEFLUX.ORG <br>
-	<input type="radio" name="PoliticalInvolvement" value="Anarchist"> The Socialist Alliance, Socialist Equality Party or your local AntiFa sanctioned party <br>
-	<input type="radio" name="PoliticalInvolvement" value="Tabloid"> The Liberal/National Coalition, Pauline Hanson's One Nation or Katter's Australian Party <br>
-
-
-
-	<h4> What is your preferred news source? </h4>
-	<input type="radio" name="NewsSource" value="Magazine"> The Sydney Morning Herald <br>
-	<input type="radio" name="NewsSource" value="Matrix"> reddit.com/r/news <br>
-	<input type="radio" name="NewsSource" value="Academic"> The Guardian <br>
-	<input type="radio" name="NewsSource" value="Anarchist"> Greg from down at Jura Books knows what's up, you can't go to Big Media for the truth, you just need to keep your ear to the ground <br>
-	<input type="radio" name="NewsSource" value="Tabloid"> The Daily Telegraph <br>
-
-
-	
-	<h4> How Tech savvy are you? </h4>
-	<input type="radio" name="Technology" value="Magazine / Tabloid"> Very tech friendly: I use social media almost constantly <br>
-	<input type="radio" name="Technology" value="Matrix"> I literally built the computer I'm reading this on <br>
-	<input type="radio" name="Technology" value="Academic"> I can navigate academic archives with extraordinary precision <br>
-	<input type="radio" name="Technology" value="Anarchist"> My online presence is untraceable <br>
-
-
-	<h4> What does Architecture mean to you? </h4> 
-	<input type="radio" name="Architecture" value="Magazine"> Grand Designs and Better Homes and Gardens <br>
-	<input type="radio" name="Architecture" value="Matrix"> Architecture is a computer for living <br>
-	<input type="radio" name="Architecture" value="Academic"> Architecture is the masterly, correct and magnificent play of masses brought together in light - Le Corbusier, Vers Un Architecture 1923 <br>
-	<input type="radio" name="Architecture" value="Anarchist"> Existing Architecture is the manifestation of the Patriarchy's Hegemony over the city. We must reclaim the streets before we can bring an Architecture to the masses <br>
-	<input type="radio" name="Architecture" value="Tabloid"> The Block, the TV show, not the social housing <br>
-
-	<h4> How old are you? </h4>
-	<input type="radio" name="Age" value="Magazine / Matrix / Anarchist"> Under 30<br>
-	<input type="radio" name="Age" value="Magazine / Academic / Tabloid"> Over 30<br>
-
-	<h4> How much did your outfit cost you? </h4>
-	<input type="radio" name="cost" value="Anarchist"> less than $10<br>
-	<input type="radio" name="cost" value="Tabloid / Matrix"> between $10 and $100<br>
-	<input type="radio" name="cost" value="Tabloid / Magazine / Academic"> more than $100<br>
-	<br>
-	<br>
-	<input type="submit" value="Submit">
-</form>
-
-</body>
 </html>
